# WikidataFrontend

./: .gitmodules  CMakeLists.txt  Dockerfile  EntityFinder.cpp  EntityFinder.h  EntityFinderMain.cpp.tmp  EntitySearchResult.h  Makefile  QLeverCommunicator.cpp  QLeverCommunicator.h  QLeverResult.h  README.md  SearchServerMain.cpp  SearchServerMainTest.cpp  ServerUtils.cpp  ServerUtils.h  WikidataEntity.cpp  WikidataEntity.h  \  extractEntities.py  search.html  search.html~  search.js  search2.js  search3.js
examples/: Q42  Q42.desc  Q42.json
src/: CMakeLists.txt  EntityFinder.cpp  EntityFinder.h  EntityFinderHelpers.h  EntitySearchResult.h  HTTPClientBoost.h  QLeverCommunicator.cpp  QLeverCommunicator.h  SearchServer.cpp  SearchServer.h  SearchServerMain.cpp  ServerUtils.cpp  ServerUtils.h  WikidataEntity.cpp  WikidataEntity.h  WikidataEntityParse.cpp  WikidataEntityParse.h
src/web/: queryHandling.js  search.css  search.html  search.js  search2.js  search3.js
test/: CMakeLists.txt  EntityFinderTest.cpp  QLeverCommunicatorTest.cpp  ServerUtilsTest.cpp  WikidataEntityTest.cpp
